[gd_scene load_steps=9 format=2]

[ext_resource path="res://AGENCYB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Graphics/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Graphics/button.theme" type="Theme" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://AGENCYR.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Graphics/button_small.theme" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control" groups=[
"menu",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.223529, 0.25098, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 25.0
margin_right = -50.0
margin_bottom = -25.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 90.0
margin_right = 290.0
margin_bottom = 430.0
size_flags_horizontal = 6
custom_constants/separation = 150

[node name="Titel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 2 )
text = "Admin"
align = 1

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 200.0
margin_bottom = 357.0
custom_constants/separation = 20

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer/ButtonContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 3 )
text = "Start game"

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer/ButtonContainer"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 3 )
text = "Quit"

[node name="TutorialContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 480.0
margin_top = 81.0
margin_right = 860.0
margin_bottom = 349.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titel" type="Label" parent="HBoxContainer/TutorialContainer"]
margin_right = 380.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "How to play"
align = 1
valign = 1

[node name="Text" type="Label" parent="HBoxContainer/TutorialContainer"]
margin_top = 89.0
margin_right = 380.0
margin_bottom = 178.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "You are the server administrator in a big software company. Unfortunately, your boss spends a lot of money on fancy architecture, but not on reliable hardware. So, during today's night shift, your main job is tokeep all servers running. Good  luck!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer/TutorialContainer"]
margin_top = 228.0
margin_right = 380.0
margin_bottom = 268.0
custom_constants/separation = 200
alignment = 1

[node name="LeftButton" type="Button" parent="HBoxContainer/TutorialContainer/ButtonContainer"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
theme = ExtResource( 6 )
text = "<"

[node name="RightButton" type="Button" parent="HBoxContainer/TutorialContainer/ButtonContainer"]
margin_left = 290.0
margin_right = 330.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
theme = ExtResource( 6 )
text = ">"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
